[gd_scene load_steps=2 format=3 uid="uid://d0pm37oocpcoo"]

[ext_resource type="Script" uid="uid://bo5ab8htyuhd6" path="res://hud/game_settings_panel.gd" id="1_wwijd"]

[node name="GameSettingsPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 295.0
offset_bottom = 246.0
script = ExtResource("1_wwijd")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FullscreenToggle" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="ResolutionScale" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HUDAspectRatio" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
